# Academy_KT

./: .gitignore  CMakeLists.txt  Owl.cpp  circle.cpp  t800.stl  tokamak.cpp
Laba0/: circle.cpp  cub.cpp  cylinder.cpp
Laba0/second/: Owl.cpp
Laba1/: CMakeLists.txt  Owl.cpp
first/: tokamak.cpp  tokamak.stl
